7141259: Native stack is missing in hs_err

Code cleanup and creating a private decoder for error handler, since it can be triggered from in signal handler, where no lock can be taken

Reviewed-by: dholmes, kamg, acorn, coleenp